# dicom-report

./: .gitignore  Makefile  pyproject.toml
.cursor/rules/: commit-and-pr-workflow.mdc
.github/workflows/: tests.yml
notebooks/: generate_reports.ipynb
scripts/: generate_report_from_test_image.py  test_manual_layout_varying_sizes.py  test_random_aspects.py
src/dicom_report/: __init__.py  app.py  paths.py  report.py
src/dicom_report/utils/: constants.py  enums.py  paths.py
tests/: test_report_layout.py  test_us_image.tif
